--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
   </head>
   <body style="background-color:lightcyan">
+    <h1>DaVinshiShowcase<h1>
     <h2 class="hi">Hello there fellow adventurer!</h2>
     <h3 class="many">There are many adventurers waiting for you!
       <br>
